updated design and text -minor
added links for the icons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener</title>
+    <title>Your Shortened Link</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
@@ -17,6 +17,7 @@
             display: flex;
             flex-direction: column;
             /* min-height: 100vh; */
+            font-weight: 500;
             height: 100vh;
         }
         .video-background {
@@ -58,6 +59,7 @@
         .footer a:hover {
             color:blueviolet;
         }
+        
     </style>
 </head>
 <body>
@@ -67,7 +69,7 @@
         </video>
     </div>
     <div class="container mx-auto px-4 py-12">
-        <h1 class="text-5xl font-bold text-center text-white mb-12">URL Shortener</h1>
+        <h4 class="text-5xl font-bold text-center text-white mb-12">Your Shortened Link</h4>
         <div class="max-w-lg mx-auto url-input-container rounded-lg shadow-xl p-8">
             <form>
                 <div class="mb-6">
@@ -81,12 +83,12 @@
     <footer class="footer">
       <div class="container mx-auto">
           <div class="flex justify-center space-x-8 footer-links">
-              <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
-              <a href="#" class="text-white"><i class="fab fa-discord"></i></a>
-              <a href="#" class="text-white"><i class="fab fa-github"></i></a>
-              <a href="#" class="text-white"><i class="fab fa-linkedin"></i></a>
+              <a href="https://instagram.com/zaid_suuiii" class="text-white"><i class="fab fa-instagram"></i></a>
+              <a href="https://discord.com/users/1167472525589102645" class="text-white"><i class="fab fa-discord"></i></a>
+              <a href="https://github.com/zaid-commits" class="text-white"><i class="fab fa-github"></i></a>
+              <a href="https://linkedin.com/zaidrakhange" class="text-white"><i class="fab fa-linkedin"></i></a>
           </div>
-          <p class="text-center text-gray-400 mt-4">&copy; 2023 URL Shortener. All rights reserved.</p>
+          <p class="text-center text-gray-400 mt-4">&copy; 2024 Your Shortened Link by Zaid Rakhange.  All rights reserved.</p>
       </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
